--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 
 
 ext {
+	springCloudServicesVersion = '1.5.0.RELEASE'
 	springCloudVersion = 'Dalston.SR2'
 }
 
@@ -30,6 +31,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.cloud:spring-cloud-starter')
 	compile('org.springframework.cloud:spring-cloud-starter-sleuth')
+	compile('io.pivotal.spring.cloud:spring-cloud-services-starter-config-client')
 	/*compile('org.springframework.boot:spring-boot-starter-data-mongodb')*/
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.projectlombok:lombok:1.16.10')
@@ -38,6 +40,7 @@ dependencies {
 
 dependencyManagement {
 	imports {
+		mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:${springCloudServicesVersion}"
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
