--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ ext {
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-actuator')
+	//compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.cloud:spring-cloud-starter')
 	compile('org.springframework.cloud:spring-cloud-starter-sleuth')
 	compile('io.pivotal.spring.cloud:spring-cloud-services-starter-config-client')
