--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
+		maven {url "http://repo.springsource.org/milestone"}
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -19,6 +20,7 @@ sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
+	maven {url "http://repo.springsource.org/milestone"}
 }
 
 
@@ -34,6 +36,8 @@ dependencies {
 	compile('io.pivotal.spring.cloud:spring-cloud-services-starter-config-client')
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.cloud:spring-cloud-spring-service-connector')
+	compile('org.springframework.cloud:spring-cloud-cloudfoundry-connector')
 	compile('org.projectlombok:lombok:1.16.10')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
